--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,38 @@ h1 {
   margin-top: -100px;
 }
 
+.logfile-form {
+  margin: 10px auto auto 20px;
+}
+
+.logfile-header {
+  margin: 10px auto auto 30px;
+  text-align: left;
+}
+
+.logfile-header>div {
+  width: 880px;
+  height: 120px;
+  display: inline-block;
+}
+
+.logfile-header>.back {
+  text-align: right;
+}
+
+.date-picker {
+  margin-left: 30px;
+  margin-top: 10px;
+  text-align: left;
+}
+
+.logfile-textarea {
+  margin-top: -20px;
+  margin-left: 30px;
+  width: 100%;
+  height: 30em;
+}
+
 .central-panel {
   background-color: #282c34;
   min-height: 100vh;
@@ -51,6 +83,17 @@ tr {
   font-size: 20px;
 }
 .link:hover {
+  color: #61dafb;
+}
+
+.back-link {
+  color: #FFF;
+  font-size: 20px;
+  margin-right: 30px;
+  margin-left: 50%;
+}
+
+.back-link:hover {
   color: #61dafb;
 }
 
